Release v1.4.2: Switching to JFX 20 and switching back to extra-java-module-info plugin